--- a/the_posting_hub/social/templates/social/search.html
+++ b/the_posting_hub/social/templates/social/search.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}{{ page_title|default:"Search" }} - The Posting Hub{% endblock %}
 
 {% block content %}
