--- a/the_posting_hub/templates/base.html
+++ b/the_posting_hub/templates/base.html
@@ -18,13 +18,14 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="/"><img src="../static/logo/Logo.png" alt="Website Logo"> The Posting Hub</a>
+      <!-- <a class="navbar-brand" href="/"><img src="../static/logo/Logo.png" alt="logo">The Posting Hub</a> -->
+      <a class="navbar-brand" href="/"><img src="{% static 'logo/logo.png' %}" alt="The Posting Hub"class="navbar-logo">The Posting Hub</a>
       <div>
         {% if user.is_authenticated %}
         <a href="#" class="btn btn-outline-light">
           <span class="material-icons">home</span>
         </a>
-        <a href="#" class="btn btn-outline-light">
+        <a href="{% url 'search' %}" class="btn btn-outline-light">
           <span class="material-icons">search</span>
         </a>
         <a href="{% url 'create_post' %}" class="btn btn-outline-light">
