--- a/the_posting_hub/core/templates/core/home.html
+++ b/the_posting_hub/core/templates/core/home.html
@@ -114,4 +114,60 @@
   <button class="btn">Contact Us</button>
 </section>
 
+<footer class="text-white mt-5">
+  <div class="container">
+    <div class="row">
+      <!-- App Name -->
+      <div class="col-md-4 mb-4 mb-md-0">
+        <h3 class="text-white"><img src="../static/logo/Logo.png" alt="Website Logo">The Posting Hub</h3>
+        <a href="#" class="btn btn-outline-light">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="#" class="btn btn-outline-light">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="#" class="btn btn-outline-light">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+      </div>
+
+      <!-- Contact Info -->
+      <div class="col-md-4 mb-4 mb-md-0">
+        <h5>Contact Us</h5>
+        <ul class="list-unstyled">
+          <li class="mb-2">
+            <i class="fas fa-map-marker-alt me-2"></i>
+            123 App Street, Tech City, TC 10001
+          </li>
+          <li class="mb-2">
+            <i class="fas fa-phone me-2"></i>
+            +1 (555) 123-4567
+          </li>
+          <li class="mb-2">
+            <i class="fas fa-envelope me-2"></i>
+            contact@thepostinghub.com
+          </li>
+        </ul>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="col-md-4">
+        <h5>Quick Links</h5>
+        <ul class="list-unstyled">
+          <li class="mb-2"><a href="#home-section" class="text-white text-decoration-none">Home</a></li>
+          <li class="mb-2"><a href="/about" class="text-white text-decoration-none">About</a></li>
+          <li class="mb-2"><a href="/about" class="text-white text-decoration-none">Our Team</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="line-break"></div>
+
+    <!-- Copyright -->
+    <div class="text-center pt-3 border-secondary">
+      <p class="mb-0 small text-white">@2025 The Posting Hub. All rights reserved.</p>
+    </div>
+  </div>
+</footer>
+
 {% endblock %}
