Liittle change in main.css

--- a/the_posting_hub/static/css/main.css
+++ b/the_posting_hub/static/css/main.css
@@ -229,7 +229,7 @@ nav {
   }
 }
 
-#thought-section {
+#about-section {
   text-align: center;
   background: radial-gradient(circle, #0f141b 50%, rgba(255, 0, 0, 0) 100%);
   padding: 50px 0;
