--- a/the_posting_hub/templates/base.html
+++ b/the_posting_hub/templates/base.html
@@ -10,19 +10,23 @@
   {% load static %}
   <!-- Link the gradient CSS -->
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
+  <!-- CKEditor -->
+  <script src="https://cdn.ckeditor.com/4.16.2/full/ckeditor.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&display=swap');
   </style>
+  {% block extra_head %}{% endblock %}
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <!-- <a class="navbar-brand" href="/"><img src="../static/logo/Logo.png" alt="logo">The Posting Hub</a> -->
-      <a class="navbar-brand" href="/"><img src="{% static 'logo/logo.png' %}" alt="The Posting Hub"class="navbar-logo">The Posting Hub</a>
+      <a class="navbar-brand" href="/"><img src="{% static 'logo/logo.png' %}" alt="The Posting Hub"
+          class="navbar-logo">The Posting Hub</a>
       <div>
         {% if user.is_authenticated %}
-        <a href="#" class="btn btn-outline-light">
+        <a href="{% url 'user_homepage' %}" class="btn btn-outline-light">
           <span class="material-icons">home</span>
         </a>
         <a href="{% url 'search' %}" class="btn btn-outline-light">
@@ -48,63 +52,6 @@
   <div class="container mt-4">
     {% block content %}{% endblock %}
   </div>
-
-  <footer class="text-white mt-5">
-    <div class="container">
-      <div class="row">
-        <!-- App Name -->
-        <div class="col-md-4 mb-4 mb-md-0">
-          <h3 class="text-white"><img src="../static/logo/Logo.png" alt="Website Logo">The Posting Hub</h3>
-          <a href="#" class="btn btn-outline-light">
-            <i class="fa-brands fa-facebook-f"></i>
-          </a>
-          <a href="#" class="btn btn-outline-light">
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-          <a href="#" class="btn btn-outline-light">
-            <i class="fa-brands fa-twitter"></i>
-          </a>
-        </div>
-
-        <!-- Contact Info -->
-        <div class="col-md-4 mb-4 mb-md-0">
-          <h5>Contact Us</h5>
-          <ul class="list-unstyled">
-            <li class="mb-2">
-              <i class="fas fa-map-marker-alt me-2"></i>
-              123 App Street, Tech City, TC 10001
-            </li>
-            <li class="mb-2">
-              <i class="fas fa-phone me-2"></i>
-              +1 (555) 123-4567
-            </li>
-            <li class="mb-2">
-              <i class="fas fa-envelope me-2"></i>
-              contact@thepostinghub.com
-            </li>
-          </ul>
-        </div>
-
-        <!-- Quick Links -->
-        <div class="col-md-4">
-          <h5>Quick Links</h5>
-          <ul class="list-unstyled">
-            <li class="mb-2"><a href="#home-section" class="text-white text-decoration-none">Home</a></li>
-            <li class="mb-2"><a href="#about-section" class="text-white text-decoration-none">About</a></li>
-            <li class="mb-2"><a href="#team-section" class="text-white text-decoration-none">Our Team</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="line-break"></div>
-
-      <!-- Copyright -->
-      <div class="text-center pt-3 border-secondary">
-        <p class="mb-0 small text-white">@2025 The Posting Hub. All rights reserved.</p>
-      </div>
-    </div>
-  </footer>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
