HopeFully Second Last Commit
Notifcations, Forget Password, Report (User, Comment, Post), Connections

--- a/the_posting_hub/core/templates/core/login.html
+++ b/the_posting_hub/core/templates/core/login.html
@@ -35,7 +35,9 @@
               <button type="submit" class="btn btn-primary">Login</button>
             </div>
           </form>
-
+          <div class="mt-3 text-center" style="color: white; word-spacing: 3px;">
+            <p><a href="{% url 'password_reset' %}">Forgot Password?</a></p>
+          </div>
           <div class="mt-3 text-center" style="color: white; word-spacing: 3px;">
             <p>Don't have an account? <a href="{% url 'signup' %}">Sign up here</a></p>
           </div>
