--- a/the_posting_hub/templates/base.html
+++ b/the_posting_hub/templates/base.html
@@ -35,7 +35,7 @@
         <a href="{% url 'create_post' %}" class="btn btn-outline-light">
           <span class="material-icons">add</span>
         </a>
-        <a href="#" class="btn btn-outline-light">
+        <a href="{% url 'notifications' %}" class="btn btn-outline-light">
           <span class="material-icons">notifications</span>
         </a>
         <a href="{% url 'dashboard' %}" class="btn btn-outline-light">
